<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/green"
    tools:context=".presentation.screen.details.DetailsFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivBack" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/spf_pro"
        android:text="@string/luka"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toEndOf="@+id/ivAvatar"
        app:layout_constraintTop_toTopOf="@+id/ivAvatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/spf_pro"
        android:text="@string/date"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="@+id/tvName"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/spf_pro"
        android:maxLines="5"
        android:text="@string/anita_max_wynnn"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/ivAvatar"
        app:layout_constraintTop_toBottomOf="@+id/ivAvatar" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImageFirst"
        android:layout_width="0dp"
        android:layout_height="197dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:scaleType="fitXY"
        app:circularflow_radiusInDP="30dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDescription"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImageSecond"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/ivImageFirst"
        app:shapeAppearanceOverlay="@style/roundedImage" />


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivImageThird"
        android:layout_width="0dp"
        android:layout_height="91dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="@+id/ivImageFirst"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/ivImageSecond"
        app:shapeAppearanceOverlay="@style/roundedImage" />

    <View
        android:id="@+id/viewLine"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/ivImageFirst" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_comment"
        app:layout_constraintEnd_toStartOf="@+id/tvComments"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf_pro"
        android:text="@string/comments"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/ivComment"
        app:layout_constraintEnd_toStartOf="@+id/ivLikes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivComment"
        app:layout_constraintTop_toTopOf="@+id/ivComment" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_heart"
        app:layout_constraintBottom_toBottomOf="@+id/tvComments"
        app:layout_constraintEnd_toStartOf="@+id/tvLikes"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvComments"
        app:layout_constraintTop_toTopOf="@+id/tvComments" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf_pro"
        android:text="@string/likes"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/ivLikes"
        app:layout_constraintEnd_toStartOf="@+id/ivShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivLikes"
        app:layout_constraintTop_toTopOf="@+id/ivLikes" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:src="@drawable/ic_share"
        app:layout_constraintBottom_toBottomOf="@+id/tvLikes"
        app:layout_constraintEnd_toStartOf="@+id/tvShare"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvLikes"
        app:layout_constraintTop_toTopOf="@+id/tvLikes" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/spf_pro"
        android:text="@string/share"
        android:textColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="@+id/ivShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ivShare"
        app:layout_constraintTop_toTopOf="@+id/ivShare" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toTopOf="@+id/appCompatEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUserAvatar"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginHorizontal="20dp"
        android:background="@drawable/custom_text_view"
        android:drawableEnd="@drawable/ic_scrapper"
        android:fontFamily="@font/spf_pro"
        android:hint="@string/write_comment"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:textColorHint="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/ivUserAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ivUserAvatar"
        app:layout_constraintTop_toTopOf="@+id/ivUserAvatar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <ImageButton
        android:id="@+id/ivBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/progressBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>